// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Review Recovery Phrase Component renders match snapshot when isFromReminder and isFromSettingsSecurity are present in the search params 1`] = `
<div>
  <div
    class="flex flex-col gap-6 items-center justify-between recovery-phrase h-full"
    data-testid="parent-selector-secure-wallet"
  >
    <div
      class=""
    >
      <div
        class="gap-3 items-center mb-4 recovery-phrase__header grid w-full"
      >
        <button
          aria-label="Back"
          class="inline-flex items-center justify-center p-0 h-8 w-8 rounded-lg bg-transparent hover:bg-hover active:bg-pressed text-icon-default"
          color="text-icon-default"
          data-testid="reveal-recovery-phrase-review-back-button"
        >
          <svg
            class="inline-block w-6 h-6 text-inherit"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.53 18.97a.75.75 0 0 1-1.06 1.06l-7.5-7.5a.75.75 0 0 1 0-1.06l7.5-7.5a.75.75 0 0 1 1.06 1.06L8.56 12Z"
            />
          </svg>
        </button>
        <h4
          class="text-default text-s-heading-sm leading-s-heading-sm tracking-s-heading-sm md:text-l-heading-sm md:leading-l-heading-sm md:tracking-l-heading-sm font-bold font-default text-center"
        >
          Save Secret Recovery Phrase
        </h4>
        <button
          aria-label="Close"
          class="inline-flex items-center justify-center p-0 h-8 w-8 rounded-lg bg-transparent hover:bg-hover active:bg-pressed text-icon-default"
          color="text-icon-default"
          data-testid="reveal-recovery-phrase-review-close-button"
        >
          <svg
            class="inline-block w-6 h-6 text-inherit"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.28 18.22a.75.75 0 0 1-1.06 1.06L12 13.06l-6.22 6.22a.75.75 0 0 1-1.06-1.06L10.94 12 4.72 5.78a.75.75 0 0 1 1.06-1.06L12 10.94l6.22-6.22a.75.75 0 0 1 1.06 1.06L13.06 12Z"
            />
          </svg>
        </button>
      </div>
      <div
        class=""
      >
        <p
          class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
        >
          <span>
             
            This is your 
            <button
              class="inline-flex items-center justify-center font-medium overflow-hidden relative duration-100 ease-linear active:ease-[cubic-bezier(0.3,0.8,0.3,1)] h-auto rounded-none bg-transparent px-0 transform-none transition-none active:scale-100 text-primary-default hover:text-primary-default-hover hover:underline hover:decoration-primary-default-hover hover:decoration-2 hover:underline-offset-4 active:text-primary-default-pressed active:decoration-primary-default-pressed hover:bg-transparent active:bg-transparent w-fit"
              role="button"
            >
              <span
                class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
              >
                Secret Recovery Phrase
              </span>
            </button>
            . Write it down in the correct order and keep it safe. If someone has your Secret Recovery Phrase, they can access your wallet. Don’t share it with anyone, ever.
             
          </span>
        </p>
      </div>
      <div
        class="flex flex-col gap-4"
      >
        <div
          class="recovery-phrase__secret rounded-lg w-full"
        >
          <div
            class="items-center justify-center recovery-phrase__chips grid recovery-phrase__chips--hidden"
            data-quiz-words="[]"
            data-recovery-phrase="debris:dizzy:just:program:just:float:decrease:vacant:alarm:reduce:speak:stadium"
            data-testid="recovery-phrase-chips"
          >
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-0"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                1
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                candy
              </p>
            </div>
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-1"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                2
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                maple
              </p>
            </div>
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-2"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                3
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                cake
              </p>
            </div>
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-3"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                4
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                sugar
              </p>
            </div>
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-4"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                5
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                pudding
              </p>
            </div>
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-5"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                6
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                cream
              </p>
            </div>
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-6"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                7
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                honey
              </p>
            </div>
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-7"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                8
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                rich
              </p>
            </div>
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-8"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                9
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                smooth
              </p>
            </div>
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-9"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                10
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                crumble
              </p>
            </div>
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-10"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                11
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                sweet
              </p>
            </div>
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-11"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                12
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                treat
              </p>
            </div>
          </div>
          <div
            class="recovery-phrase__secret-blocker-container w-full h-full"
          >
            <div
              class="flex flex-col items-center justify-center pt-2 pb-9 recovery-phrase__secret-blocker rounded-sm w-full h-full px-0"
            />
            <div
              class="flex flex-col gap-2 items-center justify-center bg-transparent recovery-phrase__secret-blocker-text w-full h-full"
              data-testid="recovery-phrase-reveal"
            >
              <svg
                class="inline-block w-5 h-5 text-icon-default"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.055 3.246a.75.75 0 1 0-1.11 1.008L5.749 6.24C2.344 8.33.879 11.55.815 11.696a.75.75 0 0 0 0 .61c.032.074.827 1.834 2.592 3.6C5.759 18.256 8.73 19.5 12 19.5a11.9 11.9 0 0 0 4.882-1.015l2.062 2.27a.75.75 0 1 0 1.11-1.01Zm4.437 7.11 3.907 4.298a3 3 0 0 1-3.907-4.298M12 18c-2.886 0-5.407-1.05-7.493-3.117A12.5 12.5 0 0 1 2.344 12c.44-.824 1.843-3.13 4.439-4.63L8.47 9.223a4.5 4.5 0 0 0 5.968 6.563l1.381 1.518A10.5 10.5 0 0 1 12 18m.563-8.947a.75.75 0 0 1 .28-1.473 4.515 4.515 0 0 1 3.635 3.997.75.75 0 0 1-.676.817 1 1 0 0 1-.07 0 .75.75 0 0 1-.75-.68 3.01 3.01 0 0 0-2.42-2.66m10.62 3.253c-.04.088-.99 2.19-3.128 4.106a.75.75 0 1 1-1-1.118A12.5 12.5 0 0 0 21.66 12a12.5 12.5 0 0 0-2.168-2.885C17.407 7.05 14.886 6 12 6a11 11 0 0 0-1.815.147.75.75 0 1 1-.248-1.48A12.6 12.6 0 0 1 12 4.5c3.27 0 6.24 1.243 8.593 3.595 1.765 1.766 2.56 3.527 2.592 3.601a.75.75 0 0 1 0 .61Z"
                />
              </svg>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
              >
                Tap to reveal
              </p>
              <p
                class="text-default text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
              >
                Make sure no one is watching your screen.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col gap-4 w-full"
    >
      <button
        class="inline-flex items-center justify-center rounded-xl px-4 font-medium overflow-hidden relative h-12 transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] bg-icon-default text-primary-inverse hover:bg-icon-default-hover active:bg-icon-default-pressed focus-visible:ring-0 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-default recovery-phrase__footer--button w-full"
        data-testid="recovery-phrase-continue"
        disabled=""
        role="button"
      >
        <span
          class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
        >
          Continue
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Review Recovery Phrase Component should match snapshot 1`] = `
<div>
  <div
    class="flex flex-col gap-6 items-center justify-between recovery-phrase h-full"
    data-testid="parent-selector-secure-wallet"
  >
    <div
      class=""
    >
      <div
        class="justify-start mb-4 w-full"
      >
        <h2
          class="text-default text-s-heading-lg leading-s-heading-lg tracking-s-heading-lg md:text-l-heading-lg md:leading-l-heading-lg md:tracking-l-heading-lg font-bold font-default"
        >
          Save your Secret Recovery Phrase
        </h2>
      </div>
      <div
        class=""
      >
        <p
          class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
        >
          <span>
             
            This is your 
            <button
              class="inline-flex items-center justify-center font-medium overflow-hidden relative duration-100 ease-linear active:ease-[cubic-bezier(0.3,0.8,0.3,1)] h-auto rounded-none bg-transparent px-0 transform-none transition-none active:scale-100 text-primary-default hover:text-primary-default-hover hover:underline hover:decoration-primary-default-hover hover:decoration-2 hover:underline-offset-4 active:text-primary-default-pressed active:decoration-primary-default-pressed hover:bg-transparent active:bg-transparent w-fit"
              role="button"
            >
              <span
                class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
              >
                Secret Recovery Phrase
              </span>
            </button>
            . Write it down in the correct order and keep it safe. If someone has your Secret Recovery Phrase, they can access your wallet. Don’t share it with anyone, ever.
             
          </span>
        </p>
      </div>
      <div
        class="flex flex-col gap-4"
      >
        <div
          class="recovery-phrase__secret rounded-lg w-full"
        >
          <div
            class="items-center justify-center recovery-phrase__chips grid recovery-phrase__chips--hidden"
            data-quiz-words="[]"
            data-recovery-phrase="debris:dizzy:just:program:just:float:decrease:vacant:alarm:reduce:speak:stadium"
            data-testid="recovery-phrase-chips"
          >
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-0"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                1
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                candy
              </p>
            </div>
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-1"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                2
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                maple
              </p>
            </div>
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-2"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                3
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                cake
              </p>
            </div>
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-3"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                4
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                sugar
              </p>
            </div>
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-4"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                5
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                pudding
              </p>
            </div>
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-5"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                6
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                cream
              </p>
            </div>
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-6"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                7
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                honey
              </p>
            </div>
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-7"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                8
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                rich
              </p>
            </div>
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-8"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                9
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                smooth
              </p>
            </div>
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-9"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                10
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                crumble
              </p>
            </div>
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-10"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                11
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                sweet
              </p>
            </div>
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-11"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                12
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                treat
              </p>
            </div>
          </div>
          <div
            class="recovery-phrase__secret-blocker-container w-full h-full"
          >
            <div
              class="flex flex-col items-center justify-center pt-2 pb-9 recovery-phrase__secret-blocker rounded-sm w-full h-full px-0"
            />
            <div
              class="flex flex-col gap-2 items-center justify-center bg-transparent recovery-phrase__secret-blocker-text w-full h-full"
              data-testid="recovery-phrase-reveal"
            >
              <svg
                class="inline-block w-5 h-5 text-icon-default"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.055 3.246a.75.75 0 1 0-1.11 1.008L5.749 6.24C2.344 8.33.879 11.55.815 11.696a.75.75 0 0 0 0 .61c.032.074.827 1.834 2.592 3.6C5.759 18.256 8.73 19.5 12 19.5a11.9 11.9 0 0 0 4.882-1.015l2.062 2.27a.75.75 0 1 0 1.11-1.01Zm4.437 7.11 3.907 4.298a3 3 0 0 1-3.907-4.298M12 18c-2.886 0-5.407-1.05-7.493-3.117A12.5 12.5 0 0 1 2.344 12c.44-.824 1.843-3.13 4.439-4.63L8.47 9.223a4.5 4.5 0 0 0 5.968 6.563l1.381 1.518A10.5 10.5 0 0 1 12 18m.563-8.947a.75.75 0 0 1 .28-1.473 4.515 4.515 0 0 1 3.635 3.997.75.75 0 0 1-.676.817 1 1 0 0 1-.07 0 .75.75 0 0 1-.75-.68 3.01 3.01 0 0 0-2.42-2.66m10.62 3.253c-.04.088-.99 2.19-3.128 4.106a.75.75 0 1 1-1-1.118A12.5 12.5 0 0 0 21.66 12a12.5 12.5 0 0 0-2.168-2.885C17.407 7.05 14.886 6 12 6a11 11 0 0 0-1.815.147.75.75 0 1 1-.248-1.48A12.6 12.6 0 0 1 12 4.5c3.27 0 6.24 1.243 8.593 3.595 1.765 1.766 2.56 3.527 2.592 3.601a.75.75 0 0 1 0 .61Z"
                />
              </svg>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
              >
                Tap to reveal
              </p>
              <p
                class="text-default text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
              >
                Make sure no one is watching your screen.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col gap-4 w-full"
    >
      <button
        class="inline-flex items-center justify-center rounded-xl px-4 font-medium overflow-hidden relative h-12 transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] bg-icon-default text-primary-inverse hover:bg-icon-default-hover active:bg-icon-default-pressed focus-visible:ring-0 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-default recovery-phrase__footer--button w-full"
        data-testid="recovery-phrase-continue"
        disabled=""
        role="button"
      >
        <span
          class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
        >
          Continue
        </span>
      </button>
      <button
        class="inline-flex items-center justify-center font-medium overflow-hidden relative duration-100 ease-linear active:ease-[cubic-bezier(0.3,0.8,0.3,1)] h-auto rounded-none bg-transparent px-0 transform-none transition-none active:scale-100 text-primary-default hover:text-primary-default-hover hover:underline hover:decoration-primary-default-hover hover:decoration-2 hover:underline-offset-4 active:text-primary-default-pressed active:decoration-primary-default-pressed w-full hover:bg-transparent active:bg-transparent"
        data-testid="recovery-phrase-remind-later"
        role="button"
      >
        <span
          class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
        >
          Remind me later
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Review Recovery Phrase Component should match snapshot after reveal recovery button is clicked 1`] = `
<div>
  <div
    class="flex flex-col gap-6 items-center justify-between recovery-phrase h-full"
    data-testid="parent-selector-secure-wallet"
  >
    <div
      class=""
    >
      <div
        class="justify-start mb-4 w-full"
      >
        <h2
          class="text-default text-s-heading-lg leading-s-heading-lg tracking-s-heading-lg md:text-l-heading-lg md:leading-l-heading-lg md:tracking-l-heading-lg font-bold font-default"
        >
          Save your Secret Recovery Phrase
        </h2>
      </div>
      <div
        class=""
      >
        <p
          class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
        >
          <span>
             
            This is your 
            <button
              class="inline-flex items-center justify-center font-medium overflow-hidden relative duration-100 ease-linear active:ease-[cubic-bezier(0.3,0.8,0.3,1)] h-auto rounded-none bg-transparent px-0 transform-none transition-none active:scale-100 text-primary-default hover:text-primary-default-hover hover:underline hover:decoration-primary-default-hover hover:decoration-2 hover:underline-offset-4 active:text-primary-default-pressed active:decoration-primary-default-pressed hover:bg-transparent active:bg-transparent w-fit"
              role="button"
            >
              <span
                class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
              >
                Secret Recovery Phrase
              </span>
            </button>
            . Write it down in the correct order and keep it safe. If someone has your Secret Recovery Phrase, they can access your wallet. Don’t share it with anyone, ever.
             
          </span>
        </p>
      </div>
      <div
        class="flex flex-col gap-4"
      >
        <div
          class="recovery-phrase__secret rounded-lg w-full"
        >
          <div
            class="items-center justify-center recovery-phrase__chips grid"
            data-quiz-words="[]"
            data-recovery-phrase="debris:dizzy:just:program:just:float:decrease:vacant:alarm:reduce:speak:stadium"
            data-testid="recovery-phrase-chips"
          >
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-0"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                1
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                debris
              </p>
            </div>
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-1"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                2
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                dizzy
              </p>
            </div>
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-2"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                3
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                just
              </p>
            </div>
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-3"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                4
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                program
              </p>
            </div>
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-4"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                5
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                just
              </p>
            </div>
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-5"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                6
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                float
              </p>
            </div>
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-6"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                7
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                decrease
              </p>
            </div>
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-7"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                8
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                vacant
              </p>
            </div>
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-8"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                9
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                alarm
              </p>
            </div>
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-9"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                10
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                reduce
              </p>
            </div>
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-10"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                11
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                speak
              </p>
            </div>
            <div
              class="flex flex-row gap-1 items-center pt-1 pb-1 border border-muted bg-muted recovery-phrase__text rounded-lg px-2"
              data-testid="recovery-phrase-chip-11"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default recovery-phrase__word-index"
              >
                12
                .
              </p>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
              >
                stadium
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col gap-4 w-full"
    >
      <button
        class="inline-flex items-center justify-center rounded-xl px-4 font-medium overflow-hidden relative h-12 transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] bg-icon-default text-primary-inverse hover:bg-icon-default-hover active:bg-icon-default-pressed focus-visible:ring-0 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-default recovery-phrase__footer--button w-full"
        data-testid="recovery-phrase-continue"
        role="button"
      >
        <span
          class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
        >
          Continue
        </span>
      </button>
      <button
        class="inline-flex items-center justify-center font-medium overflow-hidden relative duration-100 ease-linear active:ease-[cubic-bezier(0.3,0.8,0.3,1)] h-auto rounded-none bg-transparent px-0 transform-none transition-none active:scale-100 text-primary-default hover:text-primary-default-hover hover:underline hover:decoration-primary-default-hover hover:decoration-2 hover:underline-offset-4 active:text-primary-default-pressed active:decoration-primary-default-pressed w-full hover:bg-transparent active:bg-transparent"
        data-testid="recovery-phrase-remind-later"
        role="button"
      >
        <span
          class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
        >
          Remind me later
        </span>
      </button>
    </div>
  </div>
</div>
`;
